sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:13: error: not found: value c
        c += 1
        ^